# bazel-rules-curl

./: BUILD.bazel  BUILD.boringssl.bazel  README.md  WORKSPACE.bazel  curl.patch
bazel/: deps.bzl  repos.bzl
